# SkywarnPlus-NG

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: default.yaml
scripts/: create_release.py
src/skywarnplus_ng/: __init__.py  cli.py
src/skywarnplus_ng/api/: nws_client.py
src/skywarnplus_ng/api_docs/: __init__.py  code_examples.py  generator.py  interactive_docs.py  openapi.py  postman.py  sdk_generator.py
src/skywarnplus_ng/api_docs/templates/: python_sdk.py
src/skywarnplus_ng/asterisk/: courtesy_tone.py  id_change.py  manager.py
src/skywarnplus_ng/audio/: __init__.py  audio_utils.py  manager.py  tail_message.py  tts_engine.py
src/skywarnplus_ng/cli/: skycontrol.py
src/skywarnplus_ng/core/: __init__.py  application.py  config.py  models.py  state.py
src/skywarnplus_ng/database/: __init__.py  manager.py  models.py
src/skywarnplus_ng/monitoring/: health.py  server.py
src/skywarnplus_ng/notifications/: __init__.py  delivery.py  email.py  manager.py  push.py  pushover.py  subscriber.py  templates.py  webhook.py
src/skywarnplus_ng/processing/: __init__.py  analytics.py  deduplication.py  filters.py  pipeline.py  prioritization.py  validation.py  workflows.py
src/skywarnplus_ng/skydescribe/: __init__.py  dtmf_handler.py  manager.py
src/skywarnplus_ng/utils/: alertscript.py  cap_speech.py  logging.py  script_manager.py  url_security.py
src/skywarnplus_ng/web/: __init__.py  routes.py  server.py
src/skywarnplus_ng/web/handlers/: __init__.py  api_alerts.py  api_config.py  api_database.py  api_health_logs.py  api_notifications.py  api_status.py  api_updates_metrics.py  auth_handlers.py  page_handlers.py  websocket_handlers.py
src/skywarnplus_ng/web/templates/: configuration.html  dashboard.html
tests/: conftest.py  test_alertscript_substitution.py  test_audio_resample.py  test_config_yaml.py  test_nws_client_filter.py  test_piper_models_list.py  test_state_defaults.py  test_url_security.py  test_web_dashboard.py
